--- a/index.html
+++ b/index.html
@@ -64,15 +64,16 @@
 </div>
 
 <script>
-   <script>
-fetch("https://bus-density-api.onrender.com/bus/42")
-  .then(r => r.json())
-  .then(d => {
-    console.log("API DATA:", d);
-    document.body.innerHTML += "<pre>" + JSON.stringify(d, null, 2) + "</pre>";
-  })
-  .catch(e => console.error("API ERROR:", e));
+  <script>
+fetch("https://bus-density-api.onrender.com/update/42", {
+  method: "POST",
+  headers: { "Content-Type": "application/json" },
+  body: JSON.stringify({ people_count: 17 })
+})
+.then(r => r.json())
+.then(d => console.log("UPDATED:", d));
 </script>
+
 
 </script>
 
